# crawl4ai-mcp

./: .gitignore  README.md  README_PYPI.md  benchmark_links.py  commit_msg.txt  correction_plan.md  crawl_mcp.py  patch.diff  patch_cleanup.py  patch_crawl4ai_mcp.py  patch_error_iter.py  patch_file.py  patch_imports.py  patch_mocks.py  patch_re_sub.py  pyproject.toml  pytest.ini  test_ansible.py  test_crawl_local.py  test_crawl_local_fast.py
lang/: README.ar.md  README.bn.md  README.es.md  README.fr.md  README.hi.md  README.id.md  README.pt.md  README.ru.md  README.zh.md
src/crawl4ai_mcp/: __init__.py  crawler.py  server.py  utils.py
src/crawl4ai_mcp_llm/: __init__.py  cli.py  crawler.py  server.py  utils.py
tests/: run_all_tests.py  test_clean_ui_artifacts.py  test_error_detection.py  test_extract_unique_links.py  test_filename.py  test_format_markdown.py  test_init.py  test_integration_zai.py  test_markdown.py  test_path_validation.py  test_performance.py  test_results.py  test_security_debug.py  test_security_js.py  test_utils.py
